Fix site breaks overflow
Remove decorator container
Remove site container
Add `scroll` class to the header when scroll

--- a/index.html
+++ b/index.html
@@ -12,4 +12,9 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <script>
+    const configScript = document.createElement('script');
+    configScript.src = '/config/config.js?v=' + Date.now();
+    document.head.appendChild(configScript);
+  </script>
 </html>
