Optimize for SEO

--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <head>
-    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="format-detection" content="telephone=no">
     <link rel="icon" type="image/png" href="/manhaa.png" />
+    <link rel="shortcut icon" type="image/png" href="/manhaa.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="var(--accent)" />
     <title>Manhaa</title>
+    <meta name="description" content="منحى Manhaa ... نأخذك لمنحى آخر" />
+    <meta name="keywords" content="تصوير ، فوتواغرافي ، فيديو ، تسويق ، منتجات ، معماري ، توثيق ، مونتاج ، اخراج ، كاميرات ، مصورين ، مصورات ، حملات اعلانية ، موشن ، جرافيك ، تصاميم ، إدارة حسابات تواصل اجتماعي ، حسابات ، منصات ، التواصل ، الاجتماعي ، تسويق رقمي ، سوشل ميديا ، معدات ، ابداع ، محترفين" />
+    <meta name="canonical" href="https://manhaa.com/" />
+
+    <!-- Facebook Meta Info -->
+    <meta property="og:url" content="https://manhaa.com/" />
+    <meta property="og:image" content="https://manhaa.com/imgs/logo.png" />
+    <meta property="og:description" content="منحى Manhaa ... نأخذك لمنحى آخر" />
+    <meta property="og:title" content="منحى Manhaa" />
+    <meta property="og:site_name" content="منحى Manhaa" />
+    <meta property="og:see_also" content="https://manhaa.com/" />
+
+    <!-- Google+ Meta Info -->
+    <meta itemprop="name" content="منحى Manhaa"  />
+    <meta itemprop="description" content="منحى Manhaa ... نأخذك لمنحى آخر" />
+    <meta itemprop="image" content="https://manhaa.com/imgs/logo.png" />
+
+    <!-- Twitter Meta Info -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:url" content="https://manhaa.com/" />
+    <meta name="twitter:title" content="منحى Manhaa" />
+    <meta name="twitter:description" content="منحى Manhaa ... نأخذك لمنحى آخر" />
+    <meta name="twitter:image" content="https://manhaa.com/imgs/logo.png" />
+    <meta name="robots" content="all" />
+    <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="https://manhaa.com/rss.xml" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
